@@ -3,6 +3,8 @@ synaptic (0.57.9) unstable; urgency=low
   * fix more set_transient() problems with run with --parent-window-id
   * fix problem with fetch window not centered on parent (thanks to
     seb128 and glatzor)
+  * if no terminal activity is detected and the terminal is expanded
+    set the urgency hint as well (ubuntu: #31436)
 
  -- 
 
